load(
    "@ignition//tools/workspace:build_defs.bzl",
    "IGNITION_FEATURES",
    "IGNITION_ROOT",
    "IGNITION_VISIBILITY",
    "ign_configure_header",
    "ign_export_header",
    "ign_include_header",
)
load(
    "@ignition//tools/lint:lint.bzl",
    "add_lint_tests",
)

public_headers_no_gen = glob([
    "include/ignition/common/*.hh",
    "include/ignition/common/av/*.hh",
])

sources = glob(
    ["src/*.cc"],
    exclude = ["src/*_TEST.cc"],
)

test_sources = glob(["src/*_TEST.cc"])

ign_export_header(
    name = "include/ignition/common/av/Export.hh",
    export_base = "IGNITION_COMMON_AV",
    lib_name = "ignition-common-av",
    visibility = ["//visibility:private"],
)

ign_include_header(
    name = "avhh_genrule",
    out = "include/ignition/common/av.hh",
    hdrs = public_headers_no_gen + [
        "include/ignition/common/av/Export.hh",
    ],
)

public_headers = public_headers_no_gen + [
    "include/ignition/common/av/Export.hh",
    "include/ignition/common/av.hh",
]

cc_library(
    name = "av",
    srcs = sources,
    hdrs = public_headers,
    includes = ["include"],
    deps = [
        IGNITION_ROOT + "ign_common",
        "@ffmpeg//:avcodec",
        "@ffmpeg//:avdevice",
        "@ffmpeg//:avformat",
        "@ffmpeg//:avutil",
        "@ffmpeg//:swscale",
    ],
)

[cc_test(
    name = src.replace("/", "_").replace(".cc", "").replace("src_", ""),
    srcs = [src],
    env = {
        "IGN_BAZEL": "1",
        "IGN_BAZEL_PATH": "ign_common",
    },
    deps = [
        ":av",
        IGNITION_ROOT + "ign_common:test_data",
        IGNITION_ROOT + "ign_common/testing",
        "@gtest",
        "@gtest//:gtest_main",
    ],
) for src in test_sources]

add_lint_tests()
