load(
    "@ignition//tools/workspace:build_defs.bzl",
    "IGNITION_ROOT",
    "IGNITION_FEATURES",
    "IGNITION_VISIBILITY",
    "ign_configure_header",
    "ign_export_header",
    "ign_include_header"
)
load(
    "@ignition//tools/lint:lint.bzl",
    "add_lint_tests"
)

public_headers_no_gen = glob([
    "include/ignition/common/*.hh",
    "include/ignition/common/events/*.hh",
])

sources = glob(
    ["src/*.cc"],
    exclude = ["src/*_TEST.cc"],
)

test_sources = glob(["src/*_TEST.cc"])

ign_export_header(
    name = "include/ignition/common/events/Export.hh",
    export_base = "IGNITION_COMMON_EVENTS",
    lib_name = "ignition-common-events",
    visibility = ["//visibility:private"],
)

ign_include_header(
    name = "eventshh_genrule",
    out = "include/ignition/common/events.hh",
    hdrs = public_headers_no_gen + [
        "include/ignition/common/events/Export.hh",
    ],
)

public_headers = public_headers_no_gen + [
    "include/ignition/common/events/Export.hh",
    "include/ignition/common/events.hh",
]

cc_library(
    name = "events",
    srcs = sources,
    hdrs = public_headers,
    includes = ["include"],
    deps = [
        IGNITION_ROOT + "ign_common",
    ],
    visibility = IGNITION_VISIBILITY,
)

[cc_test(
    name = src.replace("/", "_").replace(".cc", "").replace("src_", ""),
    srcs = [src],
    deps = [
        ":events",
        IGNITION_ROOT + "ign_common/testing",
        "@gtest",
        "@gtest//:gtest_main",
    ],
) for src in test_sources]

add_lint_tests()
