load(
    "@ignition//tools/workspace:build_defs.bzl",
    "IGNITION_FEATURES",
    "IGNITION_ROOT",
    "IGNITION_VISIBILITY",
    "cmake_configure_file",
    "ign_configure_header",
    "ign_export_header",
    "ign_include_header",
)
load(
    "@ignition//tools/lint:lint.bzl",
    "add_lint_tests",
)

public_headers_no_gen = glob([
    "include/ignition/common/*.hh",
])

sources = glob(
    ["src/*.cc"],
    exclude = ["src/*_TEST.cc"],
)

test_sources = glob(["src/*_TEST.cc"])

cmake_configure_file(
    name = "remotery_config",
    src = "src/RemoteryConfig.h.in",
    out = "include/RemoteryConfig.h",
    cmakelists = ["CMakeLists.txt"],
    defines = [
        "RMT_ENABLED=1",
        "RMT_USE_TINYCRT=0",
        "RMT_USE_CUDA=0",
        "RMT_USE_D3D11=0",
        "RMT_USE_OPENGL=1",
        "RMT_USE_METAL=0",
    ],
    visibility = ["//visibility:private"],
)

private_headers = glob(
    ["src/*.hh"],
)

ign_export_header(
    name = "include/ignition/common/profiler/Export.hh",
    export_base = "IGNITION_COMMON_PROFILER",
    lib_name = "ignition-common-profiler",
    visibility = ["//visibility:private"],
)

ign_include_header(
    name = "profilerhh_genrule",
    out = "include/ignition/common/profiler.hh",
    hdrs = public_headers_no_gen + [
        "include/ignition/common/profiler/Export.hh",
    ],
)

public_headers = public_headers_no_gen + [
    "include/ignition/common/profiler/Export.hh",
    "include/ignition/common/profiler.hh",
]

cc_library(
    name = "remotery",
    srcs = ["src/Remotery/lib/Remotery.c"],
    hdrs = ["src/Remotery/lib/Remotery.h"],
    includes = ["src/Remotery/lib"],
)

cc_library(
    name = "profiler",
    srcs = sources + private_headers + ["include/RemoteryConfig.h"],
    hdrs = public_headers,
    defines = [
        "IGN_PROFILER_ENABLE=1",
        "IGN_PROFILER_REMOTERY=1",
    ],
    includes = ["include"],
    visibility = IGNITION_VISIBILITY,
    deps = [
        ":remotery",
        IGNITION_ROOT + "ign_common",
    ],
)

cc_test(
    name = "Profiler_Disabled_TEST",
    srcs = ["src/Profiler_Disabled_TEST.cc"],
    defines = [
        "IGN_PROFILER_ENABLE=0",
        "IGN_PROFILER_REMOTERY=0",
    ],
    deps = [
        ":profiler",
        "@gtest",
        "@gtest//:gtest_main",
    ],
)

cc_test(
    name = "Profiler_Remotery_TEST",
    srcs = ["src/Profiler_Remotery_TEST.cc"],
    deps = [
        ":profiler",
        "@gtest",
        "@gtest//:gtest_main",
    ],
)

add_lint_tests()
