load(
    "@ignition//tools/workspace:build_defs.bzl",
    "IGNITION_ROOT",
    "IGNITION_FEATURES",
    "IGNITION_VISIBILITY",
    "ign_configure_header",
    "ign_export_header",
    "ign_include_header",
    "cmake_configure_file"
)

public_headers_no_gen = glob([
    "include/ignition/common/testing/*.hh",
])

sources = glob(
    ["src/*.cc"],
    exclude = ["src/*_TEST.cc"],
)

test_sources = glob(["src/*_TEST.cc"])

ign_export_header(
    name = "include/ignition/common/testing/Export.hh",
    export_base = "IGNITION_COMMON_TESTING",
    lib_name = "ignition-common-testing",
    visibility = ["//visibility:private"],
)

ign_include_header(
    name = "testinghh_genrule",
    out = "include/ignition/common/testing.hh",
    hdrs = public_headers_no_gen + [
        "include/ignition/common/testing/Export.hh",
    ],
)

public_headers = public_headers_no_gen + [
    "include/ignition/common/testing/Export.hh",
    "include/ignition/common/testing.hh",
]

cc_library(
    name = "testing",
    srcs = sources,
    hdrs = public_headers,
    includes = ["include"],
    deps = [
        IGNITION_ROOT + "ign_common",
    ],
    visibility = IGNITION_VISIBILITY,
)

cc_test(
    name = "BazelTestPaths",
    srcs = ["src/BazelTestPaths_TEST.cc"],
    data = [
        "test_files"
    ],
    deps = [
        ":testing",
        "@gtest",
        "@gtest//:gtest_main",
    ],
    env = {
        "IGN_BAZEL": "1",
        "IGN_BAZEL_PATH": "ign_common"
    }
)

